[gd_scene load_steps=3 format=3 uid="uid://b7e47f7m63yry"]

[ext_resource type="PackedScene" uid="uid://b83jv0xa8txmn" path="res://Scenes/Components/GridContainer/GridContainer.tscn" id="1_vc0yr"]
[ext_resource type="Script" uid="uid://cyekq3gjj1n8w" path="res://Scripts/grid_container_example.gd" id="2_q6cy3"]

[node name="GridContainerExample" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_q6cy3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Columnas:"

[node name="ColumnSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 6.0
value = 3.0

[node name="ColumnValue" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"

[node name="GridContainerList" parent="VBoxContainer" instance=ExtResource("1_vc0yr")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SelectedLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Seleccionado: Ninguno"
horizontal_alignment = 1
